@@ -6,7 +6,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
@@ -36,8 +35,10 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HEARING_JUDGE_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JUDGE_NAME;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.UNDERSCORE;
 
 @Slf4j
@@ -46,9 +47,6 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.UNDERSCORE;
 @Data
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class RoleAssignmentService {
-    @Value("${prl.environment}")
-    private String environment;
-
     private final UserService userService;
     private final RoleAssignmentApi roleAssignmentApi;
     private final AuthTokenGenerator authTokenGenerator;
@@ -61,58 +59,107 @@ public class RoleAssignmentService {
                                      String eventName,
                                      boolean replaceExisting,
                                      String roleName) {
-        if (!environment.equals("preview")) {
-
-            log.info("Role Assignment called from event - {}", eventName);
-            String actorId = populateActorIdFromDto(authorization, roleAssignmentDto);
-            String roleCategory = RoleCategory.JUDICIAL.name();
-            if (null != actorId) {
-                if (null != roleAssignmentDto.getLegalAdviserList()) {
-                    roleName = "allocated-legal-adviser";
-                    roleCategory = RoleCategory.LEGAL_OPERATIONS.name();
-                }
-
-                String systemUserToken = systemUserService.getSysUserToken();
-                String systemUserId = systemUserService.getUserId(systemUserToken);
-
-                RoleRequest roleRequest = RoleRequest.roleRequest()
-                    .assignerId(systemUserId)
-                    .process("CCD")
-                    .reference(createRoleRequestReference(caseDetails, systemUserId))
-                    .replaceExisting(replaceExisting)
-                    .build();
-                String actorIdForService = actorId.split(UNDERSCORE)[0];
-                List<RequestedRoles> requestedRoles = List.of(RequestedRoles.requestedRoles()
-                                                                  .actorIdType("IDAM")
-                                                                  .actorId(actorIdForService)
-                                                                  .roleType(RoleType.CASE.name())
-                                                                  .roleName(roleName)
-                                                                  .classification(Classification.RESTRICTED.name())
-                                                                  .grantType(GrantType.SPECIFIC.name())
-                                                                  .roleCategory(roleCategory)
-                                                                  .readOnly(false)
-                                                                  .beginTime(Instant.now())
-                                                                  .attributes(Attributes.attributes()
-                                                                                  .jurisdiction(caseDetails.getJurisdiction())
-                                                                                  .caseType(caseDetails.getCaseTypeId())
-                                                                                  .caseId(caseDetails.getId().toString())
-                                                                                  .build())
-
-                                                                  .build());
-
-                RoleAssignmentRequest assignmentRequest = RoleAssignmentRequest.roleAssignmentRequest()
-                    .roleRequest(roleRequest)
-                    .requestedRoles(requestedRoles)
-                    .build();
-
-                roleAssignmentApi.updateRoleAssignment(
-                    systemUserToken,
-                    authTokenGenerator.generate(),
-                    null,
-                    assignmentRequest
-                );
+        log.info("Role Assignment called from event - {}", eventName);
+        String actorId = populateActorIdFromDto(authorization, roleAssignmentDto);
+        String roleCategory = RoleCategory.JUDICIAL.name();
+        if (null != actorId) {
+            if (null != roleAssignmentDto.getLegalAdviserList()) {
+                roleName = "allocated-legal-adviser";
+                roleCategory = RoleCategory.LEGAL_OPERATIONS.name();
             }
+
+            String systemUserToken = systemUserService.getSysUserToken();
+            String systemUserId = systemUserService.getUserId(systemUserToken);
+
+            RoleRequest roleRequest = RoleRequest.roleRequest()
+                .assignerId(systemUserId)
+                .process("CCD")
+                .reference(createRoleRequestReference(caseDetails, systemUserId))
+                .replaceExisting(replaceExisting)
+                .build();
+            String actorIdForService = actorId.split(UNDERSCORE)[0];
+            List<RequestedRoles> requestedRoles = List.of(RequestedRoles.requestedRoles()
+                                                              .actorIdType("IDAM")
+                                                              .actorId(actorIdForService)
+                                                              .roleType(RoleType.CASE.name())
+                                                              .roleName(roleName)
+                                                              .classification(Classification.RESTRICTED.name())
+                                                              .grantType(GrantType.SPECIFIC.name())
+                                                              .roleCategory(roleCategory)
+                                                              .readOnly(false)
+                                                              .beginTime(Instant.now())
+                                                              .attributes(Attributes.attributes()
+                                                                              .jurisdiction(caseDetails.getJurisdiction())
+                                                                              .caseType(caseDetails.getCaseTypeId())
+                                                                              .caseId(caseDetails.getId().toString())
+                                                                              .build())
+
+                                                              .build());
+
+            RoleAssignmentRequest assignmentRequest = RoleAssignmentRequest.roleAssignmentRequest()
+                .roleRequest(roleRequest)
+                .requestedRoles(requestedRoles)
+                .build();
+
+            roleAssignmentApi.updateRoleAssignment(
+                systemUserToken,
+                authTokenGenerator.generate(),
+                null,
+                assignmentRequest
+            );
         }
+    }
+
+    /**
+     * Create a role assignment on a case for a user. The role assignment request is made by the system user.
+     *
+     * @param caseId          the case id
+     * @param idamId          the idam id of the user to assign the role to
+     * @param roleCategory    the role category
+     * @param roleName        the role name
+     * @param replaceExisting whether to replace existing role assignments
+     */
+    public void createRoleAssignment(String caseId, String idamId, RoleCategory roleCategory, String roleName,
+                                     boolean replaceExisting) {
+        String systemUserToken = systemUserService.getSysUserToken();
+        String systemUserId = systemUserService.getUserId(systemUserToken);
+        String reference = caseId + "-" + systemUserId;
+
+        RoleRequest roleRequest = RoleRequest.roleRequest()
+            .assignerId(systemUserId)
+            .process("CCD")
+            .reference(reference)
+            .replaceExisting(replaceExisting)
+            .build();
+
+        RequestedRoles requestedRoles = RequestedRoles.requestedRoles()
+            .actorIdType("IDAM")
+            .actorId(idamId)
+            .roleType(RoleType.CASE.name())
+            .roleName(roleName)
+            .classification(Classification.RESTRICTED.name())
+            .grantType(GrantType.SPECIFIC.name())
+            .roleCategory(roleCategory.name())
+            .readOnly(false)
+            .beginTime(Instant.now())
+            .attributes(Attributes.attributes()
+                            .jurisdiction(JURISDICTION)
+                            .caseType(CASE_TYPE)
+                            .caseId(caseId)
+                            .build())
+            .build();
+
+        RoleAssignmentRequest roleAssignmentRequest = RoleAssignmentRequest.roleAssignmentRequest()
+            .roleRequest(roleRequest)
+            .requestedRoles(List.of(requestedRoles))
+            .build();
+
+        roleAssignmentApi.updateRoleAssignment(
+            systemUserToken,
+            authTokenGenerator.generate(),
+            null,
+            roleAssignmentRequest
+        );
     }
 
     private String populateActorIdFromDto(String authorization, RoleAssignmentDto roleAssignmentDto) {
@@ -121,7 +168,7 @@ public class RoleAssignmentService {
         } else if (null != roleAssignmentDto.getJudicialUser()) {
             return getIdamId(roleAssignmentDto.getJudicialUser())[0];
         } else if (null != roleAssignmentDto.getJudgeEmail()) {
-            return userService.getUserByEmailId(authorization, roleAssignmentDto.getJudgeEmail()).get(0).getId();
+            return userService.getUserByEmailId(authorization, roleAssignmentDto.getJudgeEmail()).getFirst().getId();
         }
         return null;
     }
@@ -131,7 +178,7 @@ public class RoleAssignmentService {
             legalAdviserList,
             DynamicList.class
         ).getValue().getCode(), "(", ")");
-        return userService.getUserByEmailId(authorization, laEmailId).get(0).getId();
+        return userService.getUserByEmailId(authorization, laEmailId).getFirst().getId();
     }
 
     private String createRoleRequestReference(final CaseDetails caseDetails, final String userId) {
@@ -176,10 +223,10 @@ public class RoleAssignmentService {
         Map<String, String> finalRoles = new HashMap<>();
         List<UserDetails> userDetails = userService.getUserByEmailId(authorisation, emailId);
         final String[] idamRoles = {null};
-        userDetails.stream().forEach(
+        userDetails.forEach(
             userDetail -> {
                 idamRoles[0] = "";
-                userDetail.getRoles().stream().forEach(
+                userDetail.getRoles().forEach(
                     e -> idamRoles[0] = idamRoles[0].concat(e).concat(", ")
                 );
                 finalRoles.put(userDetail.getId(), idamRoles[0].substring(0, idamRoles[0].lastIndexOf(", ")));
@@ -190,11 +237,11 @@ public class RoleAssignmentService {
             systemUserService.getSysUserToken(),
             authTokenGenerator.generate(),
             null,
-            userService.getUserByEmailId(authorisation, emailId).get(0).getId()
+            userService.getUserByEmailId(authorisation, emailId).getFirst().getId()
         );
 
         final int[] i = {0};
-        roleAssignmentServiceResponse.getRoleAssignmentResponse().stream().forEach(
+        roleAssignmentServiceResponse.getRoleAssignmentResponse().forEach(
             roleAssignmentResponse ->
                 finalRoles.put(String.valueOf(i[0]++), roleAssignmentResponse.toString())
         );
@@ -237,5 +284,18 @@ public class RoleAssignmentService {
             null,
             roleAssignmentQueryRequest
         );
+    }
+
+    /**
+     * Check if user is allocated a specific role for a case.
+     *
+     * @param caseId   the case id
+     * @param idamId   the idam id of the user
+     * @param roleName the role name
+     * @return true if user has the role for the case, false otherwise
+     */
+    public boolean isUserAllocatedRoleForCase(String caseId, String idamId, String roleName) {
+        return getRoleAssignmentForCase(caseId).getRoleAssignmentResponse().stream()
+            .anyMatch(ra -> ra.getRoleName().equals(roleName) && ra.getActorId().equals(idamId));
     }
 }
