@@ -11,6 +11,7 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.prl.clients.ccd.records.CitizenUpdatePartyDataContent;
 import uk.gov.hmcts.reform.prl.enums.CaseEvent;
@@ -34,6 +35,7 @@ import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.serviceofapplication.CitizenSos;
 import uk.gov.hmcts.reform.prl.services.C8ArchiveService;
+import uk.gov.hmcts.reform.prl.services.CaseNameService;
 import uk.gov.hmcts.reform.prl.services.ConfidentialityC8RefugeService;
 import uk.gov.hmcts.reform.prl.services.ConfidentialityTabService;
 import uk.gov.hmcts.reform.prl.services.UpdatePartyDetailsService;
@@ -44,38 +46,42 @@ import uk.gov.hmcts.reform.prl.utils.TestUtil;
 
 import java.io.IOException;
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Stream;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
+import static java.util.Collections.emptyList;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V3;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
-
 @ExtendWith(MockitoExtension.class)
-public class CitizenPartyDetailsMapperTest {
-    @InjectMocks
-    private CitizenPartyDetailsMapper citizenPartyDetailsMapper;
-    public static final String authToken = "Bearer TestAuthToken";
-    private CaseData caseData;
+class CitizenPartyDetailsMapperTest {
+    private static final String AUTH_TOKEN = "Bearer TestAuthToken";
+    private static final UUID APPLICANT_1_UUID = UUID.fromString("11111111-1111-1111-1111-111111111111");
+    private static final UUID APPLICANT_2_UUID = UUID.fromString("22222222-2222-2222-2222-222222222222");
+    private static final UUID ELEMENT_1_UUID = UUID.fromString("aaaaaaaa-1111-1111-1111-111111111111");
+    private static final UUID ELEMENT_2_UUID = UUID.fromString("bbbbbbbb-2222-2222-2222-222222222222");
 
+    private CaseData caseData;
     private CitizenUpdatedCaseData updateCaseData;
     private C100RebuildData c100RebuildData;
-    PartyDetails partyDetails;
+    private PartyDetails partyDetails;
+
+    @InjectMocks
+    private CitizenPartyDetailsMapper citizenPartyDetailsMapper;
     @Mock
     C100RespondentSolicitorService c100RespondentSolicitorService;
     @Mock
@@ -93,10 +99,12 @@ public class CitizenPartyDetailsMapperTest {
     @Mock
     C8ArchiveService c8ArchiveService;
     @Mock
-    ObjectMapper objectMapper;
+    CaseNameService caseNameService;
+    @Spy
+    ObjectMapper objectMapper = new ObjectMapper();
 
     @BeforeEach
-    public void setUpCA() throws IOException {
+    void setUpCA() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -127,7 +135,7 @@ public class CitizenPartyDetailsMapperTest {
         caseData = CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .applicants(Arrays.asList(element(applicant1)))
+            .applicants(List.of(element(applicant1)))
             .c100RebuildData(c100RebuildData)
             .build();
 
@@ -151,7 +159,7 @@ public class CitizenPartyDetailsMapperTest {
             .build();
     }
 
-    public void setUpDa() throws IOException {
+    private void setUpDa() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -194,16 +202,15 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsEventConfirmDetails() throws IOException {
+    void testMapUpdatedPartyDetailsEventConfirmDetails() throws IOException {
         setUpDa();
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData, updateCaseData,
-                                                                                                                       CaseEvent.CONFIRM_YOUR_DETAILS,
-                                                                                                                       authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.CONFIRM_YOUR_DETAILS,AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsDaRespondent() throws Exception {
+    void testMapUpdatedPartyDetailsDaRespondent() throws Exception {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -237,23 +244,20 @@ public class CitizenPartyDetailsMapperTest {
         caseData = CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .respondents(Arrays.asList(element(applicant1)))
+            .respondents(List.of(element(applicant1)))
 
             .c100RebuildData(c100RebuildData)
             .build();
         doNothing().when(c100RespondentSolicitorService).populateConfidentialAndMiscDataMap(any(), any(),
                                                                                             anyString());
         when(updatePartyDetailsService.checkIfConfidentialityDetailsChangedRespondent(any(),any())).thenReturn(true);
-        Map<String, Object> updatedCaseData = new HashMap<>();
-        Element<PartyDetails> respondent = null;
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData, updateCaseData,
-                                                                                                                       CaseEvent.KEEP_DETAILS_PRIVATE,
-                                                                                                                       authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.KEEP_DETAILS_PRIVATE, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsDa13() throws Exception {
+    void testMapUpdatedPartyDetailsDa13() throws Exception {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -290,11 +294,8 @@ public class CitizenPartyDetailsMapperTest {
             .respondentsFL401(applicant1)
             .c100RebuildData(c100RebuildData)
             .build();
-        Map<String, Object> updatedCaseData = new HashMap<>();
-        Element<PartyDetails> respondent = null;
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData, updateCaseData,
-                                                                                                                       CaseEvent.KEEP_DETAILS_PRIVATE,
-                                                                                                                       authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.KEEP_DETAILS_PRIVATE, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
@@ -316,23 +317,22 @@ public class CitizenPartyDetailsMapperTest {
         setUpDa();
         CaseEvent caseEvent = CaseEvent.valueOf(caseEventName);
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(
-            caseData, updateCaseData, caseEvent, authToken
+            caseData, updateCaseData, caseEvent, AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetails() throws IOException {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetails() throws IOException {
         setUpCA();
 
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData,updateCaseData,
-                                                                                                                       CaseEvent.CONFIRM_YOUR_DETAILS,
-                                                                                                                       authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData,updateCaseData, CaseEvent.CONFIRM_YOUR_DETAILS, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsYes() throws Exception {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsYes() throws Exception {
         setUpCA();
 
         updateCaseData = CitizenUpdatedCaseData.builder()
@@ -361,13 +361,13 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsNo() throws IOException {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsNo() throws IOException {
         setUpCA();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -389,17 +389,16 @@ public class CitizenPartyDetailsMapperTest {
                 .build())
             .partyType(PartyEnum.applicant)
             .build();
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData,updateCaseData,
-            CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData,updateCaseData, CaseEvent.CONFIRM_YOUR_DETAILS, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsEventCurrentProceedings() throws IOException {
+    void testMapUpdatedPartyDetailsEventCurrentProceedings() throws IOException {
         setUpDa();
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
-            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.CITIZEN_CURRENT_OR_PREVIOUS_PROCCEDINGS, authToken);
+            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.CITIZEN_CURRENT_OR_PREVIOUS_PROCCEDINGS, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
@@ -433,10 +432,11 @@ public class CitizenPartyDetailsMapperTest {
             .build();
         CaseData caseDataResult = citizenPartyDetailsMapper.buildUpdatedCaseData(caseData,c100RebuildData);
         assertNotNull(caseDataResult);
+        verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
     @Test
-    public void testBuildUpdatedCaseDataContainsCaseAccessCategory() throws IOException {
+    void testBuildUpdatedCaseDataContainsCaseAccessCategory() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -462,11 +462,11 @@ public class CitizenPartyDetailsMapperTest {
         CaseData caseDataResult = citizenPartyDetailsMapper.buildUpdatedCaseData(caseData,c100RebuildData);
         assertNotNull(caseDataResult.getCaseAccessCategory());
         assertEquals(caseData.getCaseTypeOfApplication(), caseDataResult.getCaseAccessCategory());
+        verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
-
     @Test
-    public void testBuildUpdatedCaseDataWhereAddressIsDontKnow() throws IOException {
+    void testBuildUpdatedCaseDataWhereAddressIsDontKnow() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -490,16 +490,70 @@ public class CitizenPartyDetailsMapperTest {
             .build();
         CaseData caseDataResult = citizenPartyDetailsMapper.buildUpdatedCaseData(caseData,c100RebuildData);
         assertNotNull(caseDataResult);
+        verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
     @Test
-    public void testGetC100RebuildCaseDataMap() throws IOException {
+    void testGetC100RebuildCaseDataMap() throws IOException {
         Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(caseData);
         assertNotNull(caseDataResult);
     }
 
     @Test
-    public void testBuildUpdatedCaseDataForMiam() throws IOException {
+    void testMiamDocIsNotPresent() throws IOException {
+        CaseData miamCaseData = CaseData.builder()
+            .id(1234567891234567L)
+            .c100RebuildData(C100RebuildData.builder().build())
+            .build();
+
+        Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamCaseData);
+        assertEquals(emptyList(), caseDataResult.get("miamDocumentsCopy"));
+    }
+
+    @Test
+    void testMiamDomesticAbuseDocIsPresent() throws IOException {
+        CaseData miamDaCaseData = CaseData.builder()
+            .id(1234567891234567L)
+            .c100RebuildData(C100RebuildData.builder()
+                                 .c100RebuildMaim(TestUtil.readFileFrom("classpath:c100-rebuild/miamDAAbuse.json"))
+                                 .build()).build();
+
+        Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamDaCaseData);
+        List<Element<Document>> miamDocumentsCopy = (List<Element<Document>>) (caseDataResult.get("miamDocumentsCopy"));
+        assertEquals(1, miamDocumentsCopy.size());
+        assertEquals("miamDAAbuseDoc.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
+    }
+
+    @Test
+    void testPreviousMaimAttendanceDocIsPresent() throws IOException {
+        CaseData miamCertCaseData = CaseData.builder()
+            .id(1234567891234567L)
+            .c100RebuildData(C100RebuildData.builder()
+                                 .c100RebuildMaim(TestUtil.readFileFrom("classpath:c100-rebuild/miamPrevious.json"))
+                                 .build()).build();
+
+        Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamCertCaseData);
+        List<Element<Document>> miamDocumentsCopy = (List<Element<Document>>) (caseDataResult.get("miamDocumentsCopy"));
+        assertEquals(1, miamDocumentsCopy.size());
+        assertEquals("miamPrevioiusAttendance.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
+    }
+
+    @Test
+    void testMiamCertificateDocIsPresent() throws IOException {
+        CaseData miamCertCaseData = CaseData.builder()
+            .id(1234567891234567L)
+            .c100RebuildData(C100RebuildData.builder()
+                                 .c100RebuildMaim(TestUtil.readFileFrom("classpath:c100-rebuild/miamCert.json"))
+                                 .build()).build();
+
+        Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamCertCaseData);
+        List<Element<Document>> miamDocumentsCopy = (List<Element<Document>>) (caseDataResult.get("miamDocumentsCopy"));
+        assertEquals(1, miamDocumentsCopy.size());
+        assertEquals("applicant__miam_certificate__08012026.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
+    }
+
+    @Test
+    void testBuildUpdatedCaseDataForMiam() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -522,10 +576,11 @@ public class CitizenPartyDetailsMapperTest {
             .build();
         CaseData caseDataResult = citizenPartyDetailsMapper.buildUpdatedCaseData(caseData,c100RebuildData);
         assertNotNull(caseDataResult);
+        verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsDaRespondentForV3() throws Exception {
+    void testMapUpdatedPartyDetailsDaRespondentForV3() throws Exception {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -560,7 +615,7 @@ public class CitizenPartyDetailsMapperTest {
             .id(1234567891234567L)
             .taskListVersion(TASK_LIST_VERSION_V3)
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .respondents(Arrays.asList(element(applicant1)))
+            .respondents(List.of(element(applicant1)))
             .c100RebuildData(c100RebuildData)
             .build();
         doNothing().when(c100RespondentSolicitorService).populateConfidentialAndMiscDataMap(any(), any(),
@@ -571,7 +626,7 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.KEEP_DETAILS_PRIVATE,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
     }
@@ -646,12 +701,14 @@ public class CitizenPartyDetailsMapperTest {
 
         CaseData caseDataResult = citizenPartyDetailsMapper.buildUpdatedCaseData(caseData, c100RebuildData);
         assertNotNull(caseDataResult);
-        assertEquals(isAddressConfidential, caseDataResult.getOtherPartyInTheCaseRevised().get(0).getValue().getIsAddressConfidential());
-        assertEquals(liveInRefuge, caseDataResult.getOtherPartyInTheCaseRevised().get(0).getValue().getLiveInRefuge());
+        PartyDetails otherParty = caseDataResult.getOtherPartyInTheCaseRevised().getFirst().getValue();
+        assertEquals(isAddressConfidential, otherParty.getIsAddressConfidential());
+        assertEquals(liveInRefuge, otherParty.getLiveInRefuge());
+        verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
     @Test
-    public void testUpdatedPartyDetailsBasedOnEvent() {
+    void testUpdatedPartyDetailsBasedOnEvent() {
         PartyDetails partyDetails1 = partyDetails.toBuilder().response(null).build();
         PartyDetails partyDetails2 = partyDetails.toBuilder()
             .response(Response.builder().responseToAllegationsOfHarm(ResponseToAllegationsOfHarm.builder().build()).build())
@@ -664,7 +721,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetailsWithSafeTimeToCall() throws IOException {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetailsWithSafeTimeToCall() throws IOException {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -690,7 +747,7 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
         assertEquals("7pm", citizenUpdatePartyDataContent.updatedCaseDataMap().get("daApplicantContactInstructions"));
@@ -698,7 +755,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsWithSafeTimeToCallEmptyString() throws IOException {
+    void testMapUpdatedPartyDetailsWithSafeTimeToCallEmptyString() throws IOException {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -724,7 +781,7 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
         assertNull(citizenUpdatePartyDataContent.updatedCaseDataMap().get("daApplicantContactInstructions"));
@@ -738,7 +795,7 @@ public class CitizenPartyDetailsMapperTest {
 
     @Test
     void testGetConfidentialFieldReturnsNullWhenNotConfidentialFields() {
-        assertEquals(null, citizenPartyDetailsMapper.getConfidentialField(YesOrNo.No, "test"));
+        assertNull(citizenPartyDetailsMapper.getConfidentialField(YesOrNo.No, "test"));
     }
 
     @Test
@@ -758,16 +815,15 @@ public class CitizenPartyDetailsMapperTest {
             .isPhoneNumberConfidential(YesOrNo.Yes)
             .build();
 
-
         List<Element<ApplicantConfidentialityDetails>> result =
             citizenPartyDetailsMapper.createApplicantConfidentialDetailsForCaseData(partyDetails);
 
-        org.junit.jupiter.api.Assertions.assertNotNull(result);
-        org.junit.jupiter.api.Assertions.assertEquals(1, result.size());
-        uk.gov.hmcts.reform.prl.models.complextypes.confidentiality.ApplicantConfidentialityDetails details = result.get(0).getValue();
-        org.junit.jupiter.api.Assertions.assertEquals(address, details.getAddress());
-        org.junit.jupiter.api.Assertions.assertNull(details.getEmail());
-        org.junit.jupiter.api.Assertions.assertEquals("123456789", details.getPhoneNumber());
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        ApplicantConfidentialityDetails details = result.getFirst().getValue();
+        assertEquals(address, details.getAddress());
+        assertNull(details.getEmail());
+        assertEquals("123456789", details.getPhoneNumber());
     }
 
     @Test
@@ -798,7 +854,7 @@ public class CitizenPartyDetailsMapperTest {
         List<Element<ApplicantConfidentialityDetails>> confDetails = result.getApplicantsConfidentialDetails();
         assertNotNull(confDetails);
         assertEquals(1, confDetails.size());
-        ApplicantConfidentialityDetails details = confDetails.get(0).getValue();
+        ApplicantConfidentialityDetails details = confDetails.getFirst().getValue();
         assertEquals(updatedPartyDetails.getAddress(), details.getAddress());
         assertNull(details.getEmail());
         assertEquals(updatedPartyDetails.getPhoneNumber(), details.getPhoneNumber());
@@ -825,7 +881,7 @@ public class CitizenPartyDetailsMapperTest {
         List<Element<ApplicantConfidentialityDetails>> confDetails = result.getApplicantsConfidentialDetails();
         assertNotNull(confDetails);
         assertEquals(1, confDetails.size());
-        ApplicantConfidentialityDetails details = confDetails.get(0).getValue();
+        ApplicantConfidentialityDetails details = confDetails.getFirst().getValue();
         assertEquals(updatedPartyDetails.getAddress(), details.getAddress());
         assertNull(details.getEmail());
         assertEquals(updatedPartyDetails.getPhoneNumber(), details.getPhoneNumber());
@@ -872,12 +928,7 @@ public class CitizenPartyDetailsMapperTest {
         }
     }
 
-    private static final UUID APPLICANT_1_UUID = UUID.fromString("11111111-1111-1111-1111-111111111111");
-    private static final UUID APPLICANT_2_UUID = UUID.fromString("22222222-2222-2222-2222-222222222222");
-    private static final UUID ELEMENT_1_UUID = UUID.fromString("aaaaaaaa-1111-1111-1111-111111111111");
-    private static final UUID ELEMENT_2_UUID = UUID.fromString("bbbbbbbb-2222-2222-2222-222222222222");
-
-    public static PartyDetails createPartyDetailsWithConfidentiality(UUID partyId,
+    private static PartyDetails createPartyDetailsWithConfidentiality(UUID partyId,
                                                                          String firstName,
                                                                          String lastName,
                                                                          YesOrNo addressConfidential,
@@ -893,14 +944,14 @@ public class CitizenPartyDetailsMapperTest {
             .build();
     }
 
-    public static CitizenUpdatedCaseData createCitizenUpdatedCaseData(PartyDetails partyDetails) {
+    private static CitizenUpdatedCaseData createCitizenUpdatedCaseData(PartyDetails partyDetails) {
         return CitizenUpdatedCaseData.builder()
             .partyDetails(partyDetails)
             .caseTypeOfApplication(C100_CASE_TYPE)
             .build();
     }
 
-    public static CaseData createCaseDataWithApplicants(List<Element<PartyDetails>> applicants) {
+    private static CaseData createCaseDataWithApplicants(List<Element<PartyDetails>> applicants) {
         return CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -908,7 +959,7 @@ public class CitizenPartyDetailsMapperTest {
             .build();
     }
 
-    static Stream<Arguments> confidentialityTestScenarios() {
+    private static Stream<Arguments> confidentialityTestScenarios() {
         return Stream.of(
             Arguments.of(
                 "Single applicant - update confidentiality",
@@ -922,7 +973,7 @@ public class CitizenPartyDetailsMapperTest {
                 "Multiple applicants - update second applicant",
                 APPLICANT_2_UUID,
                 YesOrNo.Yes, YesOrNo.Yes, YesOrNo.No,
-                Arrays.asList(
+                List.of(
                     element(ELEMENT_1_UUID, createPartyDetailsWithConfidentiality(
                         APPLICANT_1_UUID, "John", "Doe", YesOrNo.No, YesOrNo.No, YesOrNo.No)),
                     element(ELEMENT_2_UUID, createPartyDetailsWithConfidentiality(
@@ -940,5 +991,3 @@ public class CitizenPartyDetailsMapperTest {
         );
     }
 }
-
-
